--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -3,7 +3,7 @@
 	<div class="container">
 		<h1 style="text-align: center;">Create New Campground</h1>
 		
-		<form class="edit-new-form" action="/campgrounds" method="POST">
+		<form class="edit-new-form w-50" action="/campgrounds" method="POST">
 			<div class="input-group mb-3">
 				<input class="form-control" type="text" placeholder="Name" name="name" required>
 			</div>
@@ -11,7 +11,7 @@
 				<input class="form-control" type="text" placeholder="Image url" name="image" required>
 			</div>
 			<div class="input-group mb-3">
-				<input class="form-control" type="text" placeholder="Description" name="description" required>
+				<textarea class="form-control" rows="3" overflow:"hidden" type="text" placeholder="Description" name="description" required></textarea>
 			</div>
 			<div class="input-group mb-3">
 				<input class="form-control mr-2" type="number" min=0 max=1000 placeholder="Price per Night" name="price"><span id="per-night">$ /Night</span>
