--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -5,9 +5,20 @@
 			<div class="col-md-3">
 				<p class=lead>YelpCamp</p>
 				<div class="list-group">
-					<li class="list-group-item">Info 1</li>
-					<li class="list-group-item">Info 2</li>
-					<li class="list-group-item">Info 3</li>
+					<li class="list-group-item active" name="info-1">Info 1</li>
+					<li class="list-group-item" name="info-2">Info 2</li>
+					<li class="list-group-item" name="info-3">Info 3</li>
+				</div>
+				<div id="side-menu" class="p-2">
+					<p class="text-justify info-1">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vestibulum pulvinar faucibus. Nunc venenatis dui in dui varius, eu dictum orci accumsan. Curabitur id consectetur augue, at convallis nunc. Ut commodo augue metus, id bibendum nulla blandit eget. Mauris mattis blandit laoreet. Sed bibendum massa ut lectus laoreet laoreet. Sed nec imperdiet elit, in posuere purus.
+					</p>
+					<p class="text-justify info-2 start">
+						Sed in facilisis lectus. Nam egestas magna sit amet odio feugiat ullamcorper. Curabitur laoreet pulvinar elit. Ut eget volutpat quam, vel tempor diam. Pellentesque iaculis erat est, pharetra laoreet felis semper quis. Nullam placerat et ipsum quis viverra. Phasellus ut condimentum risus, quis consectetur nisl. Sed fermentum turpis a ultricies ullamcorper. 
+					</p>
+					<p class="text-justify info-3 start">
+						Nullam id eleifend ligula. Nam interdum velit at nunc interdum, sed accumsan purus imperdiet. Morbi feugiat bibendum est ac fermentum. Proin a tellus ex. Donec cursus, ipsum et porta fringilla, nulla tellus luctus risus, eget dictum est sapien eget nibh. Nulla non ipsum metus. Aenean ut ante vel metus tincidunt cursus efficitur lacinia diam. Donec ornare eleifend lacus. Nunc suscipit justo vel nibh congue, ut hendrerit libero iaculis. Donec egestas condimentum metus sed consequat. Nam commodo posuere ante et interdum. Mauris ut volutpat lorem. Cras at efficitur elit. 
+					</p>
 				</div>
 			</div>
 			<div class="col-md-9">
