--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -3,7 +3,7 @@
 	<div class="container">
 		<h1 style="text-align: center;">Edit Comment</h1>
 		
-		<form action="/campgrounds/<%= campground_id %>/comments/<%= comment._id %>/edit?_method=PUT" method="POST" style="width: 30%; margin: 30px auto">
+		<form class="w-50" action="/campgrounds/<%= campground_id %>/comments/<%= comment._id %>/edit?_method=PUT" method="POST" style="width: 30%; margin: 30px auto">
             <div class="input-group mb-3">
 				<input class="form-control" type="text" value="<%= comment.text %>" name="comment[text]">
 			</div>
