--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -3,7 +3,7 @@
 	<div class="container">
 		<h1 style="text-align: center;">Create New Comment to <%= campground.name %></h1>
 		
-		<form action="/campgrounds/<%= campground._id %>/comments" method="POST" style="width: 30%; margin: 30px auto">
+		<form class="w-50" action="/campgrounds/<%= campground._id %>/comments" method="POST" style="width: 30%; margin: 30px auto">
             <div class="input-group mb-3">
 				<input class="form-control" type="text" placeholder="Comment" name="comment[text]">
 			</div>
