--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,19 +1,21 @@
 <%- include("partials/header") %>
 
-<div class="container">
-    <h1 class="text-center">Login</h1>
+    <div class="container">
+        <h1 class="text-center">Login</h1>
 
-    <form action="/login" method="POST"">
-        <div>
-            <label for="username">Username: </label>
-            <input type="text" name="username" id="username">
+        <div class="d-flex justify-content-center mt-4">
+            <form class="w-50" action="/login" method="POST"">
+                <div class="form-group">
+                    <label for="username">Username: </label>
+                    <input class="form-control" type="text" name="username" id="username">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password: </label>
+                    <input class="form-control" type="password" name="password" id="password">
+                </div>
+                <button class="w-100 btn btn-primary">Login</button>
+            </form>
         </div>
-        <div>
-            <label for="password">Password: </label>
-            <input type="password" name="password" id="password">
-        </div>
-        <button>Login</button>
-    </form>
-</div>
+    </div>
 
     <%- include("partials/footer") %>
