--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,17 +1,21 @@
 <%- include("partials/header") %>
 
-    <h1>Sign Up YelpCamp!</h1>
+    <div class="container">
+        <h1 class="text-center">Sign Up YelpCamp!</h1>
 
-    <form action="/register" method="POST">
-        <div>
-            <label for="username">Username: </label>
-            <input type="text" name="username" id="username">
+        <div class="d-flex justify-content-center mt-4">
+            <form class="w-50" action="/register" method="POST">
+                <div class="form-group">
+                    <label for="username">Username: </label>
+                    <input class="form-control" type="text" name="username" id="username">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password: </label>
+                    <input class="form-control" type="password" name="password" id="password">
+                </div>
+                <button class="w-100 btn btn-primary">Sign Up</button>
+            </form>
         </div>
-        <div>
-            <label for="password">Password: </label>
-            <input type="password" name="password" id="password">
-        </div>
-        <button>Sign Up</button>
-    </form>
+    </div>
 
 <%- include("partials/footer") %>
